xc/programs/Xserver/hw/xfree86/os-support/bsd/bsd_KbdMap.c //bugs.freedesktop.org/show_bug.cgi?id=1824) attachment #1288     (https://bugs.freedesktop.org/attachment.cgi?id=1288): Fix kbd driver     for wskbd protocol and pure wscons console driver Patch by Matthieu     Herrb <matthieu.herrb@laas.fr>